fpp_analysis/src/test/redef/module_component_instance.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/module_component_instance.fpp:3:10
  |
3 | instance M: C base id 0
  |          ^ redefinition of symbol M
  |
 ::: [ local path prefix ]/redef/module_component_instance.fpp:2:1
  |
2 | module M { }
  | ------------ previous definition is here

